[tool.poetry]
name = "apt301-api"
version = "0.0.1"
description = "API server for Apt. 301"
authors = ["RobinRheem <robin.rheem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.2"
django-environ = "^0.4.5"
Pillow = "^7.0.0"
djangorestframework = "^3.11.0"
markdown = "^3.1.1"
django-filter = "^2.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
